Service e controller criado