@@ -1,4 +1,4 @@
-FROM openjdk:8-jre-slim
+FROM openjdk:latest
 
 EXPOSE 8080
 
@@ -6,4 +6,4 @@ RUN mkdir /app
 
 COPY build/libs/*.jar /app/Compassotest-0.0.1-SNAPSHOT.jar
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/Compassotest-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "/app/Compassotest-0.0.1-SNAPSHOT.jar"]
